[project]
name = "notebook-to-pdf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-ollama>=1.0.1",
    "nbconvert[webpdf]>=7.17.0",
    "nbformat>=5.10.4",
    "ollama>=0.6.1",
    "playwright>=1.58.0",
    "requests>=2.33.1",
    "rich>=14.3.3",
]
